--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,81 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "font-awesome";
+
+
+ /* Add a dark background color with a little bit see-through */
+ .navbar {
+     margin-bottom: 0;
+     background-color: #fff;
+     border: 0;
+     font-size: 12px !important;
+     letter-spacing: 4px;
+     opacity:0.9;
+ }
+
+ /* Put navbar in center */
+ .navbar li a, .navbar .navbar-brand {
+     color: #606060 !important;
+ }
+
+ /* Add a gray color to all navbar links */
+ .navbar li a, .navbar .navbar-brand {
+     color: #606060 !important;
+ }
+
+ /* On hover, the links will turn white */
+ .navbar-nav li a:hover {
+     color: #606060 !important;
+ }
+
+ /* The active link */
+ .navbar-nav li.active a {
+     color: #a6a6a6 !important;
+     background-color:#ffffff !important;
+ }
+
+ /* Remove border color from the collapsible button */
+ .navbar-default .navbar-toggle {
+     border-color: transparent;
+ }
+
+ /* Dropdown */
+ .open .dropdown-toggle {
+     color: #fff ;
+     background-color: #ffffff !important;
+ }
+
+ /* Dropdown links */
+ .dropdown-menu li a {
+     color: #000 !important;
+ }
+
+ /* On hover, the dropdown links will turn red */
+ .dropdown-menu li a:hover {
+     color: #a6a6a6 !important;
+ }
+
+ body {
+     font: 400 15px/1.8 Lato, sans-serif;
+     color: #777;
+     padding-top: 50px;
+ }
+
+ .navbar {
+     font-family: Montserrat, sans-serif;
+ }
+
+ footer {
+     background-color: #2d2d30;
+     color: #f5f5f5;
+     padding: 32px;
+ }
+
+ footer a {
+     color: #f5f5f5;
+ }
+
+ footer a:hover {
+     color: #777;
+     text-decoration: none;
+ }
