--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,14 @@
-<footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 Rails101
-        <br>Design by an-lee
 
-    </p>
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a><br><br>
+  <p>Design By <a href="https://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="https://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
 </footer>
+
+<script>
+$(document).ready(function(){
+    // Initialize Tooltip
+    $('[data-toggle="tooltip"]').tooltip();
+})
+</script>
