--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,51 +1,95 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">JDstore</a>
-        </div>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+          <%= link_to root_path do %>
+            <span class="navbar-brand">
+              <i class="glyphicon glyphicon-time"></i>
+              时间交易所
+            </span>
+          <% end %>
+      </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <%= link_to("Product", products_path) %>
+        <div class="collapse navbar-collapse" id="#myNavbar">
+          <ul class="nav navbar-nav navbar-center">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">时间商城
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to("所有商品", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买1小时", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买1天", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买1星期", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买1个月", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买1年", products_path) %>
+                </li>
+                <li>
+                  <%= link_to("购买7年", products_path) %>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <%= link_to("时间展区") %>
+            </li>
+            <li>
+              <%= link_to("关于我们") %>
+            </li>
+            <li>
+              <%= link_to("常见问题") %>
             </li>
           </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <%= link_to carts_path do %>
-                  Cart <i class="fa fa-shopping-cart"> </i> ( <%= current_cart.products.count %> )
-                <% end %>
-              </li>
-            <% if !current_user %>
-              <li>
-                <%= link_to("Sign up", new_user_registration_path) %> </li>
-              <li>
-                <%= link_to("Sign in", new_user_session_path) %>
-              </li>
-            <% else %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Hi!, <%= current_user.email %>
-                    <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                    <% if current_user.admin? %>
-                      <li>
-                        <%= link_to("Admin Panel", admin_products_path) %>
-                      </li>
-                    <% end %>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <%= link_to carts_path do %>
+                Cart <i class="fa fa-shopping-cart"> </i> ( <%= current_cart.products.count %> )
+              <% end %>
+            </li>
+          <% if !current_user %>
+            <li>
+              <%= link_to("Sign up", new_user_registration_path) %> </li>
+            <li>
+              <%= link_to("Sign in", new_user_session_path) %>
+            </li>
+          <% else %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Hi!, <%= current_user.email %>
+                  <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                  <% if current_user.admin? %>
                     <li>
-                      <%= link_to("My Oders List", account_orders_path) %>
+                      <%= link_to("Admin Panel", admin_products_path) %>
                     </li>
-                    <li>
-                      <%= link_to(content_tag(:i, "Sign out", class:'fa fa-sign-out'), destroy_user_session_path(:authenticity_token => form_authenticity_token()), method: :delete) %>
-                    </li>
-                </ul>
-              </li>
-            <% end %>
-            </ul>
+                  <% end %>
+                  <li>
+                    <%= link_to("My Oders List", account_orders_path) %>
+                  </li>
+                  <li>
+                    <%= link_to(content_tag(:i, "Sign out", class:'fa fa-sign-out'), destroy_user_session_path(:authenticity_token => form_authenticity_token()), method: :delete) %>
+                  </li>
+              </ul>
+            </li>
+          <% end %>
+          </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
