--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -17,7 +17,7 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="#myNavbar">
-          <ul class="nav navbar-nav navbar-center">
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">时间商城
                 <span class="caret"></span>
@@ -55,11 +55,14 @@
             <li>
               <%= link_to("常见问题") %>
             </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
             <li>
               <%= link_to carts_path do %>
-                Cart <i class="fa fa-shopping-cart"> </i> ( <%= current_cart.products.count %> )
+                <i>
+                  <span class="fa fa-shopping-cart"></span>
+                  <span class="count">
+                    <%= current_cart.products.count %>
+                  </span>
+                </i>
               <% end %>
             </li>
           <% if !current_user %>
