--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -13,52 +13,67 @@ $(document).ready(function(){
 })
 </script>
 -->
-
+<!--========== FOOTER ==========-->
 <footer class="footer">
-  <div class="column">
-    <p class="text-sm">Need support? Call <span class="text-primary">001 (917) 555-4836</span></p>
-    <div class="social-bar text-center space-bottom">
-      <a href="#" class="sb-skype" data-toggle="tooltip" data-placement="top" title="Skype">
-        <i class="socicon-skype"></i>
-      </a>
-      <a href="#" class="sb-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
-        <i class="socicon-facebook"></i>
-      </a>
-      <a href="#" class="sb-google-plus" data-toggle="tooltip" data-placement="top" title="" data-original-title="Google+">
-        <i class="socicon-googleplus"></i>
-      </a>
-      <a href="#" class="sb-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-        <i class="socicon-twitter"></i>
-      </a>
-      <a href="#" class="sb-instagram" data-toggle="tooltip" data-placement="top" title="" data-original-title="Instagram">
-        <i class="socicon-instagram"></i>
-      </a>
-    </div><!-- .social-bar -->
-    <p class="copyright">&copy; Design by <i class="text-danger material-icons favorite"></i> <a href="https://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="https://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
-  </div><!-- .column -->
-  <div class="column">
-    <h3>
-      Subscription
-      <br>
-      <small>To receive latest offers and discounts from the shop.</small>
-    </h3>
-    <form action="//rokaux.us12.list-manage.com/subscribe/post?u=c7103e2c981361a6639545bd5&amp;id=1194bb7544" method="post" target="_blank" class="subscribe-form" novalidate>
-      <input type="email" class="form-control" name="EMAIL" placeholder="Your e-mail">
-      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c7103e2c981361a6639545bd5_1194bb7544" tabindex="-1" value=""></div>
-      <button type="submit"><i class="fa fa-paper-plane fa-lg" aria-hidden="true"></i></button>
-    </form>
-  </div><!-- .column -->
-  <div class="column">
-    <h3>
-      Payment Methods
-      <br>
-      <small>We support one of the following payment methods.</small>
-    </h3>
-    <div class="cards">
-      <img src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-12-cards.png" alt="Cards">
+    <!-- Links -->
+    <div class="section-seperator">
+        <div class="content-md container">
+            <div class="row">
+                <div class="col-sm-2 sm-margin-b-30">
+                    <!-- List -->
+                    <ul class="list-unstyled footer-list">
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Home</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">About</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Work</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Contact</a></li>
+                    </ul>
+                    <!-- End List -->
+                </div>
+                <div class="col-sm-2 sm-margin-b-30">
+                    <!-- List -->
+                    <ul class="list-unstyled footer-list">
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Twitter</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Facebook</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Instagram</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">YouTube</a></li>
+                    </ul>
+                    <!-- End List -->
+                </div>
+                <div class="col-sm-3">
+                    <!-- List -->
+                    <ul class="list-unstyled footer-list">
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Subscribe to Our Newsletter</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Privacy Policy</a></li>
+                        <li class="footer-list-item"><a href="http://keenthemes.com/">Terms &amp; Conditions</a></li>
+                    </ul>
+                    <!-- End List -->
+                </div>
+            </div>
+            <!--// end row -->
+        </div>
     </div>
-    <!-- Scroll To Top Button -->
-    <div class="scroll-to-top-btn"><a class="up-arrow"></a></div>
-  </div><!-- .column -->
-</footer><!-- .footer -->
+    <!-- End Links -->
+
+    <!-- Copyright -->
+    <div class="content container">
+        <div class="row">
+            <div class="col-xs-6">
+              <h4><i class="glyphicon glyphicon-time", style="color: #17bed2;padding-top:10px;"></i>
+              TimeEx</h4>
+            </div>
+            <div class="col-xs-6 text-right">
+                <p class="margin-b-0">
+                  <%= link_to root_path do %>
+                    TimeEx
+                  <% end %>
+                  Design by:
+                  <a href="https://an-lee.pro" data-toggle="tooltip" title="Visit an-lee's blog">an-lee</a> & <a href="https://meiputi-blog.logdown.com" data-toggle="tooltip" title="Visit meiputi's blog">meiputi</a></p>
+            </div>
+        </div>
+        <!--// end row -->
+    </div>
+    <!-- End Copyright -->
+</footer>
+<!--========== END FOOTER ==========-->
+<!-- Back To Top -->
+<a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
